# CMTL

./: .clang-format  CMakeLists.txt  README.md  comment_rule.md  format.sh
src/: CMakeLists.txt
src/CMTL/: CMakeLists.txt
src/CMTL/algorithm/: area.h  extrude_surface.h  intersect.h  lawson_flip.h  normal.h  partition.h  predicate.h  triangulate_polygon.h  triangulation.h
src/CMTL/common/: attributes.h  number_utils.h  numeric_utils.h  orientation.h  vectorT.h
src/CMTL/geo2d/: box.h  geo2d_box.h  geo2d_plc.h  geo2d_point.h  geo2d_polygon.h  geo2d_polygon_soup.h  geo2d_pslg.h  geo2d_segment.h  geo2d_surface_mesh.h  geo2d_triangle.h  point.h  polygon.h  polygon_soup.h  pslg.h  segment.h  surface_mesh.h  triangle.h
src/CMTL/geo3d/: geo3d_plane.h  geo3d_point.h  geo3d_polygon.h  geo3d_polygon_soup.h  geo3d_surface_mesh.h  plane.h  point.h  polygon.h  polygon_soup.h  surface_mesh.h
src/CMTL/geometry_algorithm/: area.h  box_line_intersect.h  extrude_surface.h  intersect.h  lawson_flip.h  line_intersect.h  normal.h  predicate.h  triangulate.h  triangulate_polygon.h
src/CMTL/geometry_process/: area.h  box_line_intersect.h  extrude_surface.h  intersect.h  lawson_flip.h  line_intersect.h  normal.h  predicate.h  triangulate.h
src/CMTL/io/: io.h
src/CMTL/topology/: halfedge.h  simplicials.h
src/geo2d/: geo2d_point.cpp  geo2d_point.h  geo2d_polygon.h  geo2d_triangle.h
src/geo3d/: geo3d_point.cpp  geo3d_point.h  geo3d_polygon.h  geo3d_polygon_soup.h
src/geometry/: CMakeLists.txt
src/geometry/geo2d/: geo2d_point.h  geo2d_polygon.h  geo2d_triangle.h
src/geometry/geo3d/: geo3d_plane.h  geo3d_point.h  geo3d_polygon.h  geo3d_polygon_soup.h
src/geometry/geometry_process/: area.h  normal.h  orient.h  triangulate.h
src/geometry/topology/: halfedge.h
src/geometry_process/: area.cpp  area.h  orient.h  triangulate.cpp  triangulate.h
test/: CMakeLists.txt  geo2d_point_test.cpp
test/algorithm/: CMakeLists.txt  area_test.cpp  extrude_surface_test.cpp  intersect_test.cpp  lawson_flip_test.cpp  normal_test.cpp  partition_test.cpp  predicate_test.cpp  triangulate_polygon_test.cpp  triangulation_test.cpp
test/common/: CMakeLists.txt  attribute_test.cpp  number_utils_test.cpp  numeric_utils_test.cpp  vectorT_test.cpp
test/geo2d/: CMakeLists.txt  geo2d_point_test.cpp  geo2d_polygon_test.cpp  geo2d_surface_mesh_test.cpp
test/geo3d/: CMakeLists.txt  geo3d_plane_test.cpp  geo3d_point_test.cpp  geo3d_polygon_soup_test.cpp  geo3d_polygon_test.cpp  geo3d_surface_mesh_test.cpp
test/geometry/: CMakeLists.txt
test/geometry/common/: attribute_test.cpp  vectorT_test.cpp
test/geometry/geo2d/: geo2d_point_test.cpp  geo2d_polygon_test.cpp  geo2d_surface_mesh_test.cpp
test/geometry/geo3d/: geo3d_plane_test.cpp  geo3d_point_test.cpp  geo3d_polygon_soup_test.cpp  geo3d_polygon_test.cpp  geo3d_surface_mesh_test.cpp
test/geometry/geometry_process/: area_test.cpp  extrude_surface_test.cpp  lawson_flip_test.cpp  normal_test.cpp  predicate_test.cpp  triangulate_test.cpp
test/geometry/io/: export_obj_test.cpp  read_obj_test.cpp  (+2 more)
test/geometry_algorithm/: CMakeLists.txt  area_test.cpp  extrude_surface_test.cpp  intersect_test.cpp  lawson_flip_test.cpp  normal_test.cpp  predicate_test.cpp  triangulate_polygon_test.cpp  triangulate_test.cpp
test/geometry_process/: CMakeLists.txt  area_test.cpp  extrude_surface_test.cpp  intersect_test.cpp  lawson_flip_test.cpp  normal_test.cpp  predicate_test.cpp  triangulate_test.cpp
test/io/: CMakeLists.txt  read_obj_test.cpp  write_obj_test.cpp
(+42 files in other folders)
